--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Profile C Ramsey.png" height="180" width="180" alt="Profile picutre of Carys Ramsey"></td>
+      <td><img src="cv/images/Profile C Ramsey.png" height="180" width="180" alt="Profile picture of Carys Ramsey"></td>
       <td>
         <h1>CARYS RAMSEY</h1>
         <P>Admin Officer<em> (Exec Office)</em></P>
